# WowNum_Task

./: .gitignore  ARCHITECTURE.md  README.md  REQUIREMENTS_CHECKLIST.md  WORKING_FLOW.md  alembic.ini  feedback.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py  security.py
app/routers/: __init__.py  feedback.py
data/: taxonomy.json
tests/: test_auth.py  test_export.py  test_feedback.py  test_rate_limiting.py  test_validation.py
