[tool.poetry]
name = "wownum1"
version = "0.1.0"
description = "Feedback → Retraining Collector using FastAPI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
pydantic = "^2.9.2"
python-multipart = "^0.0.9"
orjson = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.8"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


